[tool.poetry]
name = "orm_async_tests"
version = "0.1.0"
description = "SQLAlchemy async tests."
authors = ["Martin Marrese <marrese@gmail.com>"]

[tool.poetry.scripts]
test1 = "orm_async_tests.test1:run"
test2 = "orm_async_tests.test2:run"

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = "^0.22.0"
asyncio = "^3.4.3"
SQLAlchemy = "^1.4.8"
alembic = "^1.5.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-mock = "^3.5.1"
black = "^20.8b1"
flake8-isort = "^4.0.0"
flake8 = "^3.9.1"
flake8-annotations = "^2.6.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.4.3"
autoflake = "^1.4"
mypy = "^0.812"
ipdb = "^0.13.7"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.8"}
nox = "^2020.12.31"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
skip = [
    "src/alembic/env.py"
]
